Update to discord.py 1.2
* Fix aggregation of error messages in extensions manager

--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-discord-py = {git = "https://github.com/Rapptz/discord.py", ref = "3f06f24"}
+discord-py = "==1.2.*"
 
 [dev-packages]
 
