--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-discord-py = "==1.2.*"
+discord-py = ">=1.2.5,<1.3"
+python-dateutil = "*"
 
 [dev-packages]
 
