--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-discord-py = ">=1.2.5,<1.3"
-python-dateutil = "*"
+discord-py = "~=1.3.2"
+python-dateutil = "~=2.8"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
 
 [scripts]
 start = "python -m testbot"
