--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+aiodns = "~=2.0"
+aiohttp = "~=3.6"
 discord-py = "~=1.3.2"
 python-dateutil = "~=2.8"
 
