--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 aiodns = "~=2.0"
 aiohttp = "~=3.6"
-discord-py = "~=1.3.2"
+discord-py = {extras = ["voice"],version = "~=1.3.2"}
 python-dateutil = "~=2.8"
 
 [dev-packages]
