--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ aiodns = "~=2.0"
 aiohttp = "~=3.6"
 discord-py = {extras = ["voice"], version = "~=1.5.0"}
 python-dateutil = "~=2.8"
+pyyaml = "~=5.3"
 
 [dev-packages]
 
